2020-03-06  Jose E. Marchesi  <jemarch@gnu.org>

	* HACKING: Mention non-restartable passes.

2020-03-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_struct): Avoid restarting the
	pass.
	* src/pkl-typify.c (pkl_typify1_ps_array): Likewise.
	* src/pkl-typify.c (pkl_typify1_ps_isa): Likewise.
	* src/pkl-typify.c (pkl_typify1_ps_cast): Likewise.
	* src/pkl-trans.c (pkl_trans1_ps_offset): Likewise.
	* src/pkl-trans.c (pkl_trans1_ps_print_stmt): Likewise.

2020-03-05  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/lib/poke.exp (poke_start): Pass -q to poke to avoid
	acknowledging the user init file.
	* testsuite/poke.repl/repl.exp: Use a more meaningful test name.

2020-03-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.h (PKL_AST_STRUCT_FIELD_COMPLETED): Remove.
	(struct pkl_ast_struct_field): Remove field `completed'.

2020-03-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.c (pkl_ast_type_defval): This function cannot
	calculate the default value for structs and unions.
	* src/pkl-ast.h: Prototype for pkl_ast_complete_scons.
	* src/pkl-ast.c: New function.
	* src/pkl-trans.c (pkl_trans3_ps_scons): Call
	pkl_ast_complete_scons.
	* src/pkl-gen.c (pkl_gen_ps_scons): Compile ad-hoc struct
	constructors for anonymous structs/unions.
	* src/pkl-gen.pks (struct_constructor): handle completed struct
	fields properly.
	* src/pvm.jitter (tyissct): New instruction.
	* src/pkl-insn.def (PKL_INSN_TYISSCT): Define.
	* testsuite/poke.pkl/scons-26.pk: New test.
	* testsuite/poke.pkl/scons-27.pk: Likewise.
	* testsuite/poke.pkl/scons-28.pk: Likewise.
	* testsuite/poke.pkl/scons-29.pk: Likewise.

2020-03-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.pks (struct_constructor): Support unions.
	* testsuite/poke.pkl/scons-union-1.pk: New test.
	* testsuite/poke.pkl/scons-union-2.pk: Likewise.
	* testsuite/poke.pkl/scons-union-8.pk: Likewise.
	* testsuite/poke.pkl/scons-union-6.pk: Likewise.