@@ -1690,8 +1690,9 @@ PKL_PHASE_BEGIN_HANDLER (pkl_typify1_ps_scons)
 
               found = 1;
 
-              if (!pkl_ast_type_promoteable (elem_type, type_elem_type,
-                                             0 /* promote array of any */))
+              if (!PKL_AST_STRUCT_FIELD_DUMMY (elem)
+                  && !pkl_ast_type_promoteable (elem_type, type_elem_type,
+                                                0 /* promote array of any */))
                 {
                   char *expected_type = pkl_type_str (type_elem_type, 1);
                   char *found_type = pkl_type_str (elem_type, 1);
